getStream and delete working